# kubernetes

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .transpire.py  README.md  bootstrap.sh  cluster.toml  devenv.nix  devenv.yaml  flake.nix  main.py  pyproject.toml  vault-elastic-bootstrap.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  renovate.yml
.renovate/: commit-message.json  config.json  manager.json  pr-label.json
apps/: arcanum.py  argo-workflows.py  argo_events.py  argo_workflows.py  argocd.py  argoci.py  bootstrap.py  buildkit.py  cert_manager.py  cilium.py  contour.py  coredns.py  elastic.py  fission.py  gvisor.py  harbor.py  istio.py  istio_ingress.py  keda.py  keycloak.py  knative.py  kubevirt.py  metallb.py  metrics_server.py  mycelium.py  ocf_io.py  odoo.py  postgres_operator.py  postgresql.py  prometheus.py  rabbitmq.py  rbac.py  rook.py  snapshot_controller.py  teleport.py  vault.py  vault_secrets_operator.py  velero.py  versions.py  versions.toml
apps/notes/: null.jsonnet
apps/templates/: deployment.jsonnet  ingress.jsonnet  service.jsonnet  templates.jsonnet
argo-cd/overlays/: argocd-repo-server.yaml
argocd/overlays/: argocd-secret.yaml
cilium/: Chart.yaml  requirements.yaml  values.yaml
core/argo-cd/: kustomization.yaml
core/argo-events/: kustomization.yaml
core/argo-workflows/: kustomization.yaml
core/argocd/: kustomization.yaml
core/cert-manager/: Chart.yaml
core/cilium/: values.yaml
core/contour/: Chart.yaml  values.yaml
core/coredns/: Chart.yaml
core/falco/: Chart.yaml  values.yaml
core/fission/: Chart.yaml  values.yaml
core/harbor/: Chart.yaml  values.yaml
core/keycloak/: Chart.yaml  kustomization.yaml
core/metallb/: Chart.yaml  values.yaml
core/postgres-operator/: Chart.yaml  values.yaml
core/postgresql/: Chart.yaml  values.yaml
core/prometheus/: Chart.yaml  values.yaml
core/rook/: Chart.yaml  values.yaml
core/traefik/: Chart.yaml  values.yaml
core/vault/: Chart.yaml  values.yaml
coredns/: Chart.yaml  requirements.yaml  values.yaml
deployment/applications/: argo-cd.jsonnet  argo-events.jsonnet  argocd.jsonnet  cert-manager.jsonnet  cilium.jsonnet  contour.jsonnet  coredns.jsonnet  deployment.jsonnet  lib.libsonnet  rook.jsonnet  (+2 more)
lib/: simple.libsonnet
ocf/: kustomization.yaml
ocfkube/: __init__.py  __main__.py
(+763 files in other folders)
