[tool.poetry]
name = "ocfkube"
version = "0.1.0"
description = "OCF Kubernetes configuration"
authors = [
    "OCF Staff <root@ocf.berkeley.edu>",
    "Nikhil Jha <njha@ocf.berkeley.edu>",
    "Frank Dai <fydai@ocf.berkeley.edu>",
]
readme = "README.md"
homepage = "https://github.com/ocf/kubernetes"
repository = "https://github.com/ocf/kubernetes"
documentation = "https://www.ocf.berkeley.edu/docs/staff/"
keywords = ["kubernetes"]

[tool.poetry.dependencies]
python = "^3.7"
kubernetes = "^17.17.0"
PyYAML = "^5.4.1"
tomlkit = "^0.7.2"
hvac = "^0.11.2"

[tool.poetry.scripts]
argocd-build = "ocfkube:argocd_build"

[tool.poetry.dev-dependencies]
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
